landing page added

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -175,9 +175,25 @@
 }
 
 .message.user {
-  background-color: #d1e7dd;
+  background-color: #ffffff;
   display: flex;
   justify-content: start;
+  padding: 10px 15px;
+  /* border: 1px solid #90f58b;
+  box-shadow: 2px 2px 10px #90f58bc5;
+  color: #1e3c4d */
+  color: #40ae33
+}
+
+.message.assistant {
+  background-color: #ffffff;
+  display: flex;
+  justify-content: start;
+  padding: 10px 15px;
+  /* border: 1px solid #6cacf094;
+  box-shadow: 2px 2px 10px #2b90fc6b; */
+  color: #0b58aa
+    /* color: #1e3c4d */
 }
 
 .assistant,
@@ -197,4 +213,49 @@
   display: flex;
   justify-content: end;
   background-color: #f8d7da;
+}
+
+.scrollable-container {
+  max-height: 65vh;
+  /* Adjust this height as needed */
+  overflow-y: auto;
+  padding-right: 15px;
+  scrollbar-width: thin;
+  /* Optional: To avoid content getting cut off */
+}
+
+.scrollable-container::-webkit-scrollbar {
+  width: 6px;
+  /* Change the width here */
+}
+
+.scrollable-container::-webkit-scrollbar-track {
+  background: #0b58aa;
+  /* Background color of the scrollbar track */
+}
+
+.scrollable-container::-webkit-scrollbar-thumb {
+  background-color: #0b58aa;
+  /* Color of the scrollbar thumb */
+  border-radius: 10px;
+  /* Roundness of the scrollbar thumb */
+  border: 3px solid #0b58aa;
+  /* Adds a border around the scrollbar thumb */
+}
+
+.scrollable-container::-webkit-scrollbar-thumb:hover {
+  background: #555;
+  /* Color when hovered */
+}
+
+.control,
+.control:hover {
+  background-color: #40ae33;
+  color: #ffffff;
+  margin-right: 20px;
+}
+
+.form-control {
+  margin-right: 20px;
+  width: 72%;
 }
