--- a/dashboard/src/App.css
+++ b/dashboard/src/App.css
@@ -305,5 +305,13 @@
 .form-control {
   margin-right: 20px;
   width: 72%;
-} 
+}
 
+.customCard {
+  box-shadow: 0px 0px 5px #343a403f !important;
+}
+
+.customCard:hover {
+  box-shadow: 0px 0px 8px #343a403f !important;
+  cursor: pointer;
+}
